--- a/register.html
+++ b/register.html
@@ -7,6 +7,23 @@
     <title>Online Voting System-- Registation</title>
 </head>
 <body>
-    
+    <h1>Online voting System</h1>
+    <hr>
+    <h3>Registation</h3>
+    <form action="#">
+        <input type="text" name="name" placeholder="Enter Name">
+        <input type="number" name="mobile" placeholder="Enter Mobile Number"><br><br>
+        <input type="password" name="password" placeholder="password">
+        <input type="password" name="cpassword" placeholder="Confirm Password"><br><br>
+        <input type="text" name="address" placeholder="Address"><br><br>
+        <input type="file" name="photo" placeholder="Enter Email"><br><br>
+        <label>Select Role:</label><br>
+        <select name="role"><br><br>
+            <option value="1">Voter</option>
+            <option value="2">Group</option>
+        </select><br><br>
+        <button>Register</button><br><br>
+       Alredy User? <a href="#">Login Here</a>
+    </form>
 </body>
 </html>
