--- a/login.html
+++ b/login.html
@@ -17,7 +17,7 @@
         <input type="number" name="phone" placeholder="Enter your number"><br><br>
         <input type="password" name="password" placeholder="Enter your password"><br><br>
         <button type="submit">Login </button><br><br>
-        New User? <a href="#">Signup</a>
+        New User? <a href="register.html">Signup</a>
     </div>
 </body>
 </html>
