--- a/login.html
+++ b/login.html
@@ -8,6 +8,12 @@
     <link rel="stylesheet" href="login.css">
 </head>
 <body>
+    <style>
+          #role_part{
+        padding: 10px;
+        width: 30%;
+       }
+    </style>
     <div class="heading_part">
         <h1>Online Voting System</h1>
         <hr>
@@ -16,6 +22,13 @@
         <h4>Login</h4>
         <input type="number" name="phone" placeholder="Enter your number"><br><br>
         <input type="password" name="password" placeholder="Enter your password"><br><br>
+       <center> <div id="role_part">
+        <label>Select Role:</label>
+    <select name="role">    
+        <option value="1">Voter</option>
+        <option value="2">Group</option>
+    </select>
+    </div> <br></center> 
         <button type="submit">Login </button><br><br>
         New User? <a href="register.html">Signup</a>
     </div>
