--- a/login.html
+++ b/login.html
@@ -21,7 +21,7 @@
         <option value="2">Group</option>
     </select><br><br>
         <button type="submit">Login </button><br><br>
-        New User? <a href="register.php">Signup</a>
+        New User? <a href="register.html">Signup</a>
     </div>
 </body>
 </html>
