--- a/register.html
+++ b/register.html
@@ -32,7 +32,7 @@
     </style>
     <h1>Online voting System</h1>
     <hr>
-    <form action="#" class="body_form">
+    <form action="../Online-voting-system/api/register.php" method="POST" class="body_form">
         <h3>Registation</h3>
         <input type="text" name="name" placeholder="Enter Name">
         <input type="number" name="mobile" placeholder="Enter Mobile Number"><br><br>
@@ -42,7 +42,7 @@
        <center>
         <div id="imagepart">
             <label>Upload images:</label>
-            <input type="file" name="photo" placeholder="Enter Email"><br><br>
+            <input type="file" name="photo"><br><br>
         </div>
     </center>
     <center><br>
@@ -55,7 +55,7 @@
         </div>
     </center><br>
         <button style="color: black;">Register</button><br><br>
-       Alredy User? <a href="login.php">Login Here</a>
+       Alredy User? <a href="login.html">Login Here</a>
     </form>
 </body>
 </html>
