--- a/register.html
+++ b/register.html
@@ -1,3 +1,6 @@
+<?php
+include
+?>
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -34,11 +37,11 @@
     <hr>
     <form action="../Online-voting-system/api/register.php" method="POST" class="body_form">
         <h3>Registation</h3>
-        <input type="text" name="name" placeholder="Enter Name">
-        <input type="number" name="mobile" placeholder="Enter Mobile Number"><br><br>
-        <input type="password" name="password" placeholder="password">
-        <input type="password" name="cpassword" placeholder="Confirm Password"><br><br>
-        <input id="address_input" type="text" name="address" placeholder="Address"><br><br>
+        <input type="text" name="name" placeholder="Enter Name" required>
+        <input type="number" name="mobile" placeholder="Enter Mobile Number" required><br><br>
+        <input type="password" name="password" placeholder="password" required>
+        <input type="password" name="cpassword" placeholder="Confirm Password" required><br><br>
+        <input id="address_input" type="text" name="address" placeholder="Address" required><br><br>
        <center>
         <div id="imagepart">
             <label>Upload images:</label>
@@ -54,7 +57,7 @@
         </select>
         </div>
     </center><br>
-    
+
         <button style="color: black;">Register</button><br><br>
        Alredy User? <a href="login.html">Login Here</a>
     </form>
